Update Asciidoctor to 4.0.4
- Bumps project version to 0.16.
- Updates release instructions with new verification steps.
- Simplifies dependency versions: we're on grolifant 3.0.1 now, no need for constraint, no need for explicitly setting asciidocextension version in our plugin, we get 2.5.7 now.
- Update renamed Asciidoc types.
- Fixes Javadoc warnings and JDK warnings when running asciidoctor.