@@ -1,8 +1,7 @@
 package org.gradle.playframework
 
-import org.asciidoctor.gradle.AsciidoctorExtension
-import org.asciidoctor.gradle.AsciidoctorPlugin
-import org.asciidoctor.gradle.AsciidoctorTask
+import org.asciidoctor.gradle.jvm.AsciidoctorJPlugin
+import org.asciidoctor.gradle.jvm.AsciidoctorTask
 import org.gradle.api.Plugin
 import org.gradle.api.Project
 import org.gradle.api.tasks.util.PatternSet
@@ -12,26 +11,20 @@ import org.gradle.kotlin.dsl.*
 class UserGuidePlugin : Plugin<Project> {
     override fun apply(project: Project): Unit = project.run {
         applyAsciidocPlugin()
-        configureAsciidoctorExtension()
         configureAsciidoctorTask()
     }
 
     private
     fun Project.applyAsciidocPlugin() {
-        apply<AsciidoctorPlugin>()
-    }
-
-    private
-    fun Project.configureAsciidoctorExtension() {
-        configure<AsciidoctorExtension> {
-            setVersion("1.6.0")
-        }
+        apply<AsciidoctorJPlugin>()
     }
 
     private
     fun Project.configureAsciidoctorTask() {
         val asciidoctor by tasks.existing(AsciidoctorTask::class) {
-            sourceDir = file("src/docs/asciidoc")
+            setSourceDir(file("src/docs/asciidoc"))
+            setBaseDir(file("src/docs/asciidoc"))
+
             sources(
                 delegateClosureOf<PatternSet> {
                     include("index.adoc")
@@ -50,13 +43,20 @@ class UserGuidePlugin : Plugin<Project> {
                     "samplesCodeDir" to file("src/docs/samples")
                 )
             )
+
+            forkOptions {
+                jvmArgs(
+                    "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+                    "--add-opens", "java.base/java.io=ALL-UNNAMED",
+                )
+            }
         }
 
         afterEvaluate {
             asciidoctor {
                 // Replace hard-coded version in samples with project version
                 doLast {
-                    val htmlUserGuideFile = file("$outputDir/html5/index.html")
+                    val htmlUserGuideFile = file("$outputDir/index.html")
                     var text = htmlUserGuideFile.readText()
                     text = text.replace(Regex("id 'org.gradle.playframework' version '.+'"), "id 'org.gradle.playframework' version '${project.version}'")
                     htmlUserGuideFile.writeText(text)
